Reviews section updated along with swagger documentation
